[package]
name = "arweave-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
dotenv = "0.15.0"
juniper = "0.16.1"
juniper_warp = "0.8.0"
mongodb = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
